Нормальная бд + обновлённые авторизация и регисстрация

--- a/CybersportTournament/App.config
+++ b/CybersportTournament/App.config
@@ -8,8 +8,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-    <add name="CybersportTournamentsEntities" connectionString="metadata=res://*/CybersportTournamentModel.csdl|res://*/CybersportTournamentModel.ssdl|res://*/CybersportTournamentModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=TRIPS;initial catalog=CybersportTournaments;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    
+  <add name="CybersportTournamentsEntities" connectionString="metadata=res://*/CybersportTournamentsModel.csdl|res://*/CybersportTournamentsModel.ssdl|res://*/CybersportTournamentsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=TRIPS;initial catalog=CybersportTournaments;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
