--- a/CybersportTournament/CybersportTournament.csproj
+++ b/CybersportTournament/CybersportTournament.csproj
@@ -64,24 +64,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Styles\Style.xaml.cs" />
-    <Compile Include="CybersportTournamentsModel.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>CybersportTournamentsModel.Context.tt</DependentUpon>
+    <Compile Include="AddPlayerWindow.xaml.cs">
+      <DependentUpon>AddPlayerWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="CybersportTournamentsModel.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>CybersportTournamentsModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="CybersportTournamentsModel.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>CybersportTournamentsModel.edmx</DependentUpon>
-    </Compile>
-    <Compile Include="ErrorWindow.xaml.cs">
-      <DependentUpon>ErrorWindow.xaml</DependentUpon>
+    <Compile Include="AddTeamWindow.xaml.cs">
+      <DependentUpon>AddTeamWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Games.cs">
       <DependentUpon>CybersportTournamentsModel.tt</DependentUpon>
@@ -104,17 +91,36 @@
     <Compile Include="PlayersList.cs">
       <DependentUpon>CybersportTournamentsModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="RegistrationWindow.xaml.cs">
-      <DependentUpon>RegistrationWindow.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="RegitrationConfirmedWindow.xaml.cs">
-      <DependentUpon>RegitrationConfirmedWindow.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Rounds.cs">
       <DependentUpon>CybersportTournamentsModel.tt</DependentUpon>
     </Compile>
     <Compile Include="RoundsList.cs">
       <DependentUpon>CybersportTournamentsModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Styles\Style.xaml.cs" />
+    <Compile Include="CybersportTournamentsModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CybersportTournamentsModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="CybersportTournamentsModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CybersportTournamentsModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="CybersportTournamentsModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CybersportTournamentsModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="ErrorWindow.xaml.cs">
+      <DependentUpon>ErrorWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="RegistrationWindow.xaml.cs">
+      <DependentUpon>RegistrationWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="RegitrationConfirmedWindow.xaml.cs">
+      <DependentUpon>RegitrationConfirmedWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="sysdiagrams.cs">
       <DependentUpon>CybersportTournamentsModel.tt</DependentUpon>
@@ -131,12 +137,21 @@
     <Compile Include="TournamentsResults.cs">
       <DependentUpon>CybersportTournamentsModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Users.cs">
-      <DependentUpon>CybersportTournamentsModel.tt</DependentUpon>
-    </Compile>
+    <Compile Include="User.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Users.cs">
+      <DependentUpon>CybersportTournamentsModel.tt</DependentUpon>
+    </Compile>
+    <Page Include="AddPlayerWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AddTeamWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="AuthorizationWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
