--- a/CybersportTournament/App.config
+++ b/CybersportTournament/App.config
@@ -7,9 +7,6 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
-  <connectionStrings>
-    
-  <add name="CybersportTournamentsEntities" connectionString="metadata=res://*/CybersportTournamentsModel.csdl|res://*/CybersportTournamentsModel.ssdl|res://*/CybersportTournamentsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=TRIPS;initial catalog=CybersportTournaments;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -20,4 +17,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="CybersportTournamentsEntities" connectionString="metadata=res://*/CybersportTournamentsModel.csdl|res://*/CybersportTournamentsModel.ssdl|res://*/CybersportTournamentsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=TRIPS;initial catalog=CybersportTournaments;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
