--- a/CybersportTournament/CybersportTournament.csproj
+++ b/CybersportTournament/CybersportTournament.csproj
@@ -70,6 +70,9 @@
     <Compile Include="AddMapWindow.xaml.cs">
       <DependentUpon>AddMapWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="AddMatchWindow.xaml.cs">
+      <DependentUpon>AddMatchWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="AddPlayerWindow.xaml.cs">
       <DependentUpon>AddPlayerWindow.xaml</DependentUpon>
     </Compile>
@@ -158,6 +161,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="AddMapWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AddMatchWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
