--- a/CybersportTournament/CybersportTournament.csproj
+++ b/CybersportTournament/CybersportTournament.csproj
@@ -103,6 +103,12 @@
     <Compile Include="Games.cs">
       <DependentUpon>CybersportTournamentModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="ListWindows\PlayersListWindow.xaml.cs">
+      <DependentUpon>PlayersListWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ListWindows\TeamsListWindow.xaml.cs">
+      <DependentUpon>TeamsListWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MapsGame.cs">
       <DependentUpon>CybersportTournamentModel.tt</DependentUpon>
     </Compile>
@@ -204,6 +210,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="ListWindows\PlayersListWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ListWindows\TeamsListWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="RegistrationWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -258,9 +272,7 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="AddWindows\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="CybersportTournamentModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
