--- a/CybersportTournament/App.config
+++ b/CybersportTournament/App.config
@@ -17,7 +17,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <add name="CybersportTournamentsEntities" connectionString="metadata=res://*/CybersportTournamentModel.csdl|res://*/CybersportTournamentModel.ssdl|res://*/CybersportTournamentModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=TRIPS;initial catalog=CybersportTournaments;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
-</configuration>
+<connectionStrings><add name="CybersportTournamentEntities" connectionString="metadata=res://*/CybersportTournamentModel.csdl|res://*/CybersportTournamentModel.ssdl|res://*/CybersportTournamentModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=mssql;initial catalog=gr692_kme;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
